@@ -1,16 +1,14 @@
 package com.classhub.api.service.impl;
 
 import com.classhub.api.exeption.ChangeException;
+import com.classhub.api.exeption.StudentNotFoundException;
 import com.classhub.api.exeption.UserNotFoundException;
-import com.classhub.api.model.mapper.StudentMapper;
 import com.classhub.api.model.users.Student;
-import com.classhub.api.model.dto.StudentDto;
 import com.classhub.api.repository.StudentsRepository;
 import com.classhub.api.repository.UserRepository;
 import com.classhub.api.service.StudentService;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.Optional;
@@ -19,17 +17,11 @@ import java.util.Optional;
 @RequiredArgsConstructor
 public class StudentServiceImpl implements StudentService {
     private final StudentsRepository studentsRepository;
-    private final StudentMapper studentMapper;
     private final UserRepository userRepository;
 
     @Override
-    public ResponseEntity<String> createStudent(Long id) {
-        try {
+    public void createStudent(Long id) {
             studentsRepository.save(new Student(id));
-        } catch (Exception e) {
-            return new ResponseEntity<>("failed", HttpStatus.CONFLICT);
-        }
-        return new ResponseEntity<>("success", HttpStatus.CREATED);
     }
 
     @Override
@@ -39,27 +31,27 @@ public class StudentServiceImpl implements StudentService {
 
     @Override
     public Student getStudentByUsername(String username) {
-        Long id = userRepository.findByUsername(username).get().getId();
-        if (!studentsRepository.existsById(id)) {
-            throw new UserNotFoundException(
-                    "User with username %s not found".formatted(username));
-        }
-        return studentsRepository.findById(id).get();
+        return userRepository.findByUsername(username)
+                .flatMap(user -> studentsRepository.findById(user.getId()))
+                .orElseThrow(() -> new UserNotFoundException(
+                        String.format("User with username %s not found", username)));
     }
 
     @Override
-    public ResponseEntity<String>  editStudent(StudentDto studentDto) {
+    public Student  editStudent(Student student, String username) {
         try {
-            Student existingStudent = getStudentByUsername(studentDto.getUsername());
-            Student updatedStudent = studentMapper.updateStudentFromDTO(studentDto, existingStudent);
-            studentsRepository.save(updatedStudent);
-            return new ResponseEntity<>("Success", HttpStatus.OK);
-        } catch (UserNotFoundException e) {
-            return new ResponseEntity<>("User not found: " + e.getMessage(), HttpStatus.NOT_FOUND);
-        } catch (ChangeException e) {
-            return new ResponseEntity<>("Change error: " + e.getMessage(), HttpStatus.BAD_REQUEST);
+            Student existingStudent = getStudentByUsername(username);
+            existingStudent.setPatronymic(student.getPatronymic());
+            existingStudent.setLast_name(student.getLast_name());
+            existingStudent.setFirst_name(student.getFirst_name());
+            existingStudent.setFaculty(student.getFaculty());
+            existingStudent.setCluster(student.getCluster());
+            studentsRepository.save(existingStudent);
+            return existingStudent;
+        } catch (EntityNotFoundException e) {
+            throw new StudentNotFoundException("Student with username " + username + " not found");
         } catch (Exception e) {
-            return new ResponseEntity<>("An error occurred while processing the request", HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new ChangeException("Error editing administrator");
         }
     }
 
